--- a/docs/webpack/my-project/src/search.less
+++ b/docs/webpack/my-project/src/search.less
@@ -1,4 +1,11 @@
+@font-face {
+  font-family: "SourceHanSerifSC-Heavy";
+  src: url("./images/SourceHanSerifSC-Heavy.otf") format("truetype");
+}
+
+
 .search-text {
   font-size: 20px;
   color: #f00;
+  font-family: "SourceHanSerifSC-Heavy";
 }
